--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,6 @@ header {
 
 .navbar-logo-second-header {
   display: none;
-  height: 50px;
   padding: 15px;
   width: 106px;
   height: 80px;
